<resources>
    <string name="app_name">GBVAccounts</string>
    <string name="login_btntxt">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="createloan">CreateLoan</string>
    <string name="loanheading">Loan Details</string>
    <string name="btnloan">Loan</string>
    <string name="btnkarigar">Karigar</string>
    <string name="btnstocks">Stocks</string>
    <string name="btnaccounts">Accounts</string>
    <string name="title_activity_karigar">Karigar</string>

</resources>
