<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.onestechsolution.gbvaccounts.Main">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/btnloan"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/btnkarigar" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/btnaccounts" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/btnstocks" />

    </LinearLayout>

</ScrollView>
